# AISDFourthLab

./: CMakeLists.txt  CMakeSettings.json  main.cpp  validator.py  window.cpp  window.h
